# mathpub

./: .gitignore  AGENTS.md  COMPONENT_LEXICON_DESIGN.md  E2E_GUIDE.md  GUI_DESIGN.md  GUI_IMPLEMENTATION_PLAN.md  MVP_DESIGN.md  MVP_VALIDATION.md  PRIVATE_PUBLICATIONS.md  README.md  REMEDIATION_PLAN.md  SHORTCOMINGS.md  TESTING_STRATEGY.md  VISION.md  flake.nix  mathpub.toml  pyproject.toml
.codex/skills/mathpub-author-problem-set/: SKILL.md
.codex/skills/mathpub-author-problem-set/agents/: openai.yaml
.codex/skills/mathpub-author-section/: SKILL.md
.codex/skills/mathpub-author-section/agents/: openai.yaml
.codex/skills/mathpub-author-self-assessment/: SKILL.md
.codex/skills/mathpub-author-unit-practice/: SKILL.md
.codex/skills/mathpub-plan-curriculum/: SKILL.md
.github/workflows/: ci.yml
publications/: physics-practice.toml  physics-validation.toml
src/mathpub/: __init__.py  catalog.py  cli.py  config.py  errors.py  instance.py  output.py  publish.py  question.py  render.py  sage_runner.py  scaffold.py
src/mathpub/gui/: __init__.py  server.py  synctex.py  terminal.py
src/mathpub/schemas/: __init__.py  component-v1.json  profile-v1.json  project-v1.json  publication-v1.json  question-v1.json
tests/: conftest.py  test_authoring.py  test_cli.py  test_components.py  test_gui.py  test_instance.py  test_publish.py  test_synctex.py  test_validation_examples.py
tests/e2e/001_physics_worksheet/: README.md  test_physics_worksheet.py
tests/e2e/002_gui_workspace/: README.md  test_gui_workspace.py
tests/e2e/helpers/: pdf_visual_helper.py
(+40 files in other folders)
