[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathpub"
version = "0.1.0"
description = "Reproducible mathematical worksheet publishing"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
authors = [{ name = "mathpub contributors" }]
dependencies = [
  "jsonschema",
  "numpy",
  "pypdf",
]

[project.scripts]
mathpub = "mathpub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mathpub"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
